2009-10-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (Tk_TextCmd, TextEditUndo, TextEditRedo)
	(TextEditCmd, updateDirtyFlag):
	* generic/tkText.h: [Patch 1469210]: Corrected handling of marking as
	dirty when inserting after an undo from a non-dirty state.

2009-10-07  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixScrlbr.c (TkpComputeScrollbarGeometry): [Patch 2088597]:
	Stop scrollbars from getting too small at the end.

2009-09-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkMenuDraw.c (TkPostSubmenu): [Bug 873613]: Fix reposting of
	* win/tkWinMenu.c (TkWinHandleMenuEvent): submenu in torn off Windows
	menu.
	(DrawMenuEntryArrow): [Bug 873608]: Draw Win menu arrow after being
	torn off.

2009-08-24  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXHLEvents.c (ScriptHandler): fix "do script" apple
	event handler issues on recent Mac OS X releases by using AE coercion
	to 'utf8' for text data and to 'fsrf' for alias data. (reported by
	Youness Alaoui on tcl-mac)

2009-07-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFocus.c (TkFocusDeadWindow): [Bug 2496114]: Ensure that
	focus desynchronization doesn't cause a crash.

2009-04-30  Don Porter  <dgp@users.sourceforge.net>

	* win/tkWinPixmap.c (Tk_GetPixmap): [Bug 2080533]: Added patch that
	allows Tk to keep working even when the graphics card is stressed.

2009-04-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tcl.m4, unix/configure (SC_CONFIG_CFLAGS): harden the check
	to add _r to CC on AIX with threads.

2009-04-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/tcl.m4:	Removed -Wno-implicit-int from CFLAGS_WARNING.

2009-04-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:	Restore _TCL guards around tcl.h inclusion to restore
	compat with early 8.4.* releases.  Thanks Stuart Cassoff. [Bug 1723812]

2009-02-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkWindow.c: [Bug 2645457] check for dead windows after